@@ -1,3 +1,10 @@
+2008-07-23  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* tkchat.tcl: Enable logging private chat to file (added option
+	checkbox on options dialog). Added support for sending and
+	responding to xmpp pings and fixed up the client discovery iq
+	responses so we can delare feature support.
+
 2008-06-05  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* tkchat.tcl: Applied patch from bug #1985214 from Matthias Kraft
